hubSide/force-app/main/default/objects/Equipement_sinistre__c/Equipement_sinistre__c.object-meta.xml
<CustomObject>
    <label>Equipement sinistré</label>
    <nameField>
        <label>Equipement sinistré</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipement sinistre</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>