hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Adresse_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_livraison__c</fullName>
    <label>Adresse de livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>