hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/BAppliStockFluctuationRef__c.field-meta.xml
<CustomField>
    <fullName>BAppliStockFluctuationRef__c</fullName>
    <label>Numéro de mouvement de stock BAppli</label>
    <length>55</length>
    <type>Text</type>
</CustomField>