hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Batterie_out__c.field-meta.xml
<CustomField>
    <fullName>Batterie_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batterie out</label>
    <type>Checkbox</type>
</CustomField>