hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <description>If Equipement_client__c IS NOT NULL Then = Equipement_client__r.Brand_Name__c
Else If Product2Id__c IS NOT NULL Then = Product2Id__r.BrandId__r.Name
Else If BrandId__c IS NOT NULL Then  = BrandId__r.Name
Else = Brand_not_recognized__c</description>
    <formula>IF( NOT(ISBLANK(Equipement_client__c)) , Equipement_client__r.Brand_Name__c  , IF( NOT(ISBLANK(Product2Id__c)) ,  Product2Id__r.BrandId__r.Name ,  IF(NOT(ISBLANK(BrandId__c)),  BrandId__r.Name ,  Brand_not_recognized__c ) ))</formula>
    <label>Marque</label>
    <type>Text</type>
</CustomField>