hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Brand_not_recognized__c.field-meta.xml
<CustomField>
    <fullName>Brand_not_recognized__c</fullName>
    <description>Stores the name of the brand if BrandId__c is blank</description>
    <label>Nom de la marque non reconnu</label>
    <length>20</length>
    <type>Text</type>
</CustomField>