hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/BrandId__c.field-meta.xml
<CustomField>
    <fullName>BrandId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marque du catalogue équipement</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Equipement sinistré</relationshipLabel>
    <relationshipName>Equipement_sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>