hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Capacite__c.field-meta.xml
<CustomField>
    <fullName>Capacite__c</fullName>
    <label>Capacité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8Go</fullName>
            </value>
            <value>
                <fullName>16Go</fullName>
            </value>
            <value>
                <fullName>32Go</fullName>
            </value>
            <value>
                <fullName>64Go</fullName>
            </value>
            <value>
                <fullName>128Go</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>