hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Overwritten by the flow &quot;InsuredItem_Name&quot;</description>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>itemCategory</valueSetName>
    </valueSet>
</CustomField>