hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Category_not_recognized__c.field-meta.xml
<CustomField>
    <fullName>Category_not_recognized__c</fullName>
    <description>Stores the category if Product2Id__c is blank</description>
    <label>Catégorie du modèle non reconnu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>itemCategory</valueSetName>
    </valueSet>
</CustomField>