hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Chassis_cass_voil__c.field-meta.xml
<CustomField>
    <fullName>Chassis_cass_voil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chassis cassé/voilé</label>
    <type>Checkbox</type>
</CustomField>