hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Chassis_voile__c.field-meta.xml
<CustomField>
    <fullName>Chassis_voile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chassis voile</label>
    <type>Checkbox</type>
</CustomField>