hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/ChooseEqp__c.field-meta.xml
<CustomField>
    <fullName>ChooseEqp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modèle-choisi</label>
    <referenceTo>Matrice_cout_equipement__c</referenceTo>
    <relationshipLabel>Equipement sinistre (Equipement C)</relationshipLabel>
    <relationshipName>Equipement_sinistre1</relationshipName>
    <type>Lookup</type>
</CustomField>