hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/ChooseEquipment__c.field-meta.xml
<CustomField>
    <fullName>ChooseEquipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipement choisi</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.vlocity_ins__RecordTypeName__c</field>
            <operation>equals</operation>
            <value>itemCatalog</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Equipement sinistre (Equipement choisit)</relationshipLabel>
    <relationshipName>Equipement_sinistre1</relationshipName>
    <type>Lookup</type>
</CustomField>