hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/ChosenEquip__c.field-meta.xml
<CustomField>
    <fullName>ChosenEquip__c</fullName>
    <description>Matrice coût équipement choisie par le client - Matrice chosen by the client</description>
    <label>Choix client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choix 1</fullName>
            </value>
            <value>
                <fullName>Choix 2</fullName>
            </value>
            <value>
                <fullName>Choix 3</fullName>
            </value>
            <value>
                <fullName>RefusingProposals</fullName>
                <label>Refus des propositions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>