hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>Ville</label>
    <length>40</length>
    <type>Text</type>
</CustomField>