hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/ClientChoiceDate__c.field-meta.xml
<CustomField>
    <fullName>ClientChoiceDate__c</fullName>
    <label>Date choix client</label>
    <type>Date</type>
</CustomField>