hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Code_verrouillage_demande__c.field-meta.xml
<CustomField>
    <fullName>Code_verrouillage_demande__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Code verrouillage demande</label>
    <type>Checkbox</type>
</CustomField>