hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Code_verrouillage_fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Code_verrouillage_fournisseur__c</fullName>
    <label>Code verrouillage fournisseur</label>
    <length>25</length>
    <type>Text</type>
</CustomField>