hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Couleur__c.field-meta.xml
<CustomField>
    <fullName>Couleur__c</fullName>
    <label>Couleur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noir</fullName>
            </value>
            <value>
                <fullName>Doré</fullName>
            </value>
            <value>
                <fullName>Argent</fullName>
            </value>
            <value>
                <fullName>Blanc</fullName>
            </value>
            <value>
                <fullName>Rouge</fullName>
            </value>
            <value>
                <fullName>Vert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>