hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>Pays</label>
    <length>60</length>
    <type>Text</type>
</CustomField>