hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Date_de_suspension_de_ligne__c.field-meta.xml
<CustomField>
    <fullName>Date_de_suspension_de_ligne__c</fullName>
    <label>Date de suspension de ligne</label>
    <type>Date</type>
</CustomField>