hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/DateheuredernierappelSMS__c.field-meta.xml
<CustomField>
    <fullName>DateheuredernierappelSMS__c</fullName>
    <label>Date &amp; heure du dernier appel/SMS</label>
    <type>DateTime</type>
</CustomField>