hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Degat__c.field-meta.xml
<CustomField>
    <fullName>Degat__c</fullName>
    <label>Degats apparents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coque cassée</fullName>
            </value>
            <value>
                <fullName>Ecran cassée</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>