hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Degats_visuels__c.field-meta.xml
<CustomField>
    <fullName>Degats_visuels__c</fullName>
    <label>Dégâts visuels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecran cassé</fullName>
            </value>
            <value>
                <fullName>LCD inteme cassé</fullName>
            </value>
            <value>
                <fullName>Face arrière cassée</fullName>
            </value>
            <value>
                <fullName>Tactile HS / Ecran noir</fullName>
            </value>
            <value>
                <fullName>Batterie</fullName>
            </value>
            <value>
                <fullName>Trace d&apos;oxydation</fullName>
            </value>
            <value>
                <fullName>Chassie tordu</fullName>
            </value>
            <value>
                <fullName>Ne s&apos;allume pas</fullName>
            </value>
            <value>
                <fullName>Connectique charge</fullName>
            </value>
            <value>
                <fullName>Connectique oreillette</fullName>
            </value>
            <value>
                <fullName>Bouton de démarrage / veille / home</fullName>
            </value>
            <value>
                <fullName>APN avant cassé</fullName>
            </value>
            <value>
                <fullName>APN arrière cassé</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>