hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/DeliveryMode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMode__c</fullName>
    <label>Mode de Livraison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A domicile</fullName>
            </value>
            <value>
                <fullName>En magasin Hubside</fullName>
                <isActive>false</isActive>
                <label>En magasin Hubside</label>
            </value>
            <value>
                <fullName>En point relais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>