hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Description_de_document__c.field-meta.xml
<CustomField>
    <fullName>Description_de_document__c</fullName>
    <label>Description de document</label>
    <type>TextArea</type>
</CustomField>