hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/documents_l_interieur__c.field-meta.xml
<CustomField>
    <fullName>documents_l_interieur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents à l&apos;interieur</label>
    <type>Checkbox</type>
</CustomField>