hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Ecran_casse__c.field-meta.xml
<CustomField>
    <fullName>Ecran_casse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ecran cassé</label>
    <type>Checkbox</type>
</CustomField>