hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/El_ments_manquants__c.field-meta.xml
<CustomField>
    <fullName>El_ments_manquants__c</fullName>
    <label>Eléments manquants au produit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morceaux de téléphone</fullName>
            </value>
            <value>
                <fullName>Cache Batterie</fullName>
            </value>
            <value>
                <fullName>Batterie</fullName>
            </value>
            <value>
                <fullName>Trappe SIM</fullName>
            </value>
            <value>
                <fullName>Cache d&apos;étanchéité</fullName>
            </value>
            <value>
                <fullName>Autres ( Bracelet montre, hélices drones)</fullName>
            </value>
            <value>
                <fullName>Stylet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>