hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Element__c.field-meta.xml
<CustomField>
    <fullName>Element__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eléments manquants</label>
    <type>Checkbox</type>
</CustomField>