hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/ElEments_dans_le_colis__c.field-meta.xml
<CustomField>
    <fullName>ElEments_dans_le_colis__c</fullName>
    <label>Eléments dans le colis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carte SIM</fullName>
            </value>
            <value>
                <fullName>Carte Mémoire</fullName>
            </value>
            <value>
                <fullName>Coque de protection</fullName>
            </value>
            <value>
                <fullName>Stylet</fullName>
            </value>
            <value>
                <fullName>Chargeur/ Kit oreillette</fullName>
            </value>
            <value>
                <fullName>Boîte originale</fullName>
            </value>
            <value>
                <fullName>Bracelet montre/ sangle APN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>