hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Equipement_client__c.field-meta.xml
<CustomField>
    <fullName>Equipement_client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipement client</label>
    <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
    <relationshipName>Equipement_sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>