hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/EquipmentAmount__c.field-meta.xml
<CustomField>
    <fullName>EquipmentAmount__c</fullName>
    <label>Valeur Echange</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>