hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Etat_produit__c.field-meta.xml
<CustomField>
    <fullName>Etat_produit__c</fullName>
    <label>Etat produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broken</fullName>
                <label>Casse : (fonctionne mal, panne, en plusieurs morceaux, hors d&apos;usage)</label>
            </value>
            <value>
                <fullName>Oxidised</fullName>
                <label>Oxydation :(Ne charge plus, Ne s&apos;allume plus, Clavier HS, Écran HS)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>