hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/ExpeditionDate__c.field-meta.xml
<CustomField>
    <fullName>ExpeditionDate__c</fullName>
    <label>Date d&apos;expédition</label>
    <type>Date</type>
</CustomField>