hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/FirstChoice__c.field-meta.xml
<CustomField>
    <fullName>FirstChoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Premier choix du GS lors de du choix de l&apos;indemnisation - First choice made by the GS when choosing a compensation.</description>
    <label>Choix 1</label>
    <referenceTo>Matrice_cout_equipement__c</referenceTo>
    <relationshipLabel>Equipement sinistre (Choix 1)</relationshipLabel>
    <relationshipName>Equipement_sinistre2</relationshipName>
    <type>Lookup</type>
</CustomField>