hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/FirstChoiceRank__c.field-meta.xml
<CustomField>
    <fullName>FirstChoiceRank__c</fullName>
    <description>Grade du choix #1 - First choice rank</description>
    <label>Grade choix 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeEquipSin</valueSetName>
    </valueSet>
</CustomField>