hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Geolocalisation__c.field-meta.xml
<CustomField>
    <fullName>Geolocalisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Géolocalisation</label>
    <type>Checkbox</type>
</CustomField>