hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Id_externe__c.field-meta.xml
<CustomField>
    <fullName>Id_externe__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id externe pour l&apos;intégration API qui est l&apos;Id du Case parent via le Web et est alimenté en post default value à Id si vide</description>
    <externalId>true</externalId>
    <label>Id externe</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>