hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/IMEI_non_identifiable__c.field-meta.xml
<CustomField>
    <fullName>IMEI_non_identifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IMEI non identifiable</label>
    <type>Checkbox</type>
</CustomField>