hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/IMEI_Re_u__c.field-meta.xml
<CustomField>
    <fullName>IMEI_Re_u__c</fullName>
    <label>IMEI Reçu</label>
    <length>100</length>
    <type>Text</type>
</CustomField>