hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/IsModeleNonReconnu__c.field-meta.xml
<CustomField>
    <fullName>IsModeleNonReconnu__c</fullName>
    <description>Indicates whether the model of record does not exist in the Product2 where RT=itemCatalog</description>
    <formula>IF( NOT(ISBLANK(Equipement_client__c)) ,  Equipement_client__r.IsModeleNonReconnu__c  , IF(ISBLANK(Product2Id__c), true  , false))</formula>
    <label>Modèle non reconnu</label>
    <type>Checkbox</type>
</CustomField>