hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/ItemCostMatrix__c.field-meta.xml
<CustomField>
    <fullName>ItemCostMatrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matrice coût equipement</label>
    <referenceTo>Matrice_cout_equipement__c</referenceTo>
    <relationshipLabel>Equipement sinistre</relationshipLabel>
    <relationshipName>Equipement_sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>