hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/LastStatus__c.field-meta.xml
<CustomField>
    <fullName>LastStatus__c</fullName>
    <description>Last status of the equipment.</description>
    <label>LastStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>