hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/LastStatusModification__c.field-meta.xml
<CustomField>
    <fullName>LastStatusModification__c</fullName>
    <label>LastStatusModification</label>
    <type>DateTime</type>
</CustomField>