hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Montant_equipement__c.field-meta.xml
<CustomField>
    <fullName>Montant_equipement__c</fullName>
    <label>Montant équipement</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>