hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Montant_franchise__c.field-meta.xml
<CustomField>
    <fullName>Montant_franchise__c</fullName>
    <label>Montant franchise</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>