hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Name_not_recognized__c.field-meta.xml
<CustomField>
    <fullName>Name_not_recognized__c</fullName>
    <description>Stores the name of the model if Product2Id__c is blank</description>
    <label>Nom du modèle non reconnu</label>
    <length>100</length>
    <type>Text</type>
</CustomField>