hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Telephony operator</description>
    <label>Opérateur</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OperatorCountry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Operators</valueSetName>
    </valueSet>
</CustomField>