hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/OperatorCountry__c.field-meta.xml
<CustomField>
    <fullName>OperatorCountry__c</fullName>
    <label>Pays de l&apos;opérateur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_ins__Country</valueSetName>
    </valueSet>
</CustomField>