hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <label>Date de commande</label>
    <type>DateTime</type>
</CustomField>