hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/PlanName__c.field-meta.xml
<CustomField>
    <fullName>PlanName__c</fullName>
    <label>Nom forfait</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PlanName</valueSetName>
    </valueSet>
</CustomField>