hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>L&apos;équipement produit unique associé</description>
    <label>Catalogue équipement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.vlocity_ins__RecordTypeName__c</field>
            <operation>equals</operation>
            <value>itemCatalog</value>
        </filterItems>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.IsInsurance__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Equipement sinistre</relationshipLabel>
    <relationshipName>Equipement_sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>