hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Produit_apple_oxyde__c.field-meta.xml
<CustomField>
    <fullName>Produit_apple_oxyde__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Produit apple oxyde</label>
    <type>Checkbox</type>
</CustomField>