hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/province__c.field-meta.xml
<CustomField>
    <fullName>province__c</fullName>
    <label>Département/Région</label>
    <length>45</length>
    <type>Text</type>
</CustomField>