hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/RealCost__c.field-meta.xml
<CustomField>
    <fullName>RealCost__c</fullName>
    <label>Coût Réel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>