hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/RelayPointIdExterne__c.field-meta.xml
<CustomField>
    <fullName>RelayPointIdExterne__c</fullName>
    <label>Identifiant Point Relais</label>
    <length>55</length>
    <type>Text</type>
</CustomField>