hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Retour_SAV__c.field-meta.xml
<CustomField>
    <fullName>Retour_SAV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retour SAV</label>
    <type>Checkbox</type>
</CustomField>