hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/SecondChoice__c.field-meta.xml
<CustomField>
    <fullName>SecondChoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deuxième choix du GS lors du choix de l&apos;indemnisation - Second choice made by the GS when choosing a compensation.</description>
    <label>Choix 2</label>
    <referenceTo>Matrice_cout_equipement__c</referenceTo>
    <relationshipLabel>Equipement sinistre (2ème choix)</relationshipLabel>
    <relationshipName>Equipement_sinistre3</relationshipName>
    <type>Lookup</type>
</CustomField>