hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/SecondChoiceRank__c.field-meta.xml
<CustomField>
    <fullName>SecondChoiceRank__c</fullName>
    <description>Grade du choix #2 - Second choice rank</description>
    <label>Grade choix 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeEquipSin</valueSetName>
    </valueSet>
</CustomField>