hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/serialNumberType__c.field-meta.xml
<CustomField>
    <fullName>serialNumberType__c</fullName>
    <label>Type du numéro de série</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>serialNumberType</valueSetName>
    </valueSet>
</CustomField>