hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/SerieNumber__c.field-meta.xml
<CustomField>
    <fullName>SerieNumber__c</fullName>
    <label>Numero de serie (IMEI)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>