hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Si_autres_pr_cisez__c.field-meta.xml
<CustomField>
    <fullName>Si_autres_pr_cisez__c</fullName>
    <label>Si autres, précisez</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>