hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Sinistre__c.field-meta.xml
<CustomField>
    <fullName>Sinistre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sinistre</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>Déclaration, Sinistre, SAV, Sinistre clôturé</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Equipement sinistré</relationshipLabel>
    <relationshipName>Equipement_sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>