hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Sous_statut__c.field-meta.xml
<CustomField>
    <fullName>Sous_statut__c</fullName>
    <label>Sous-statut</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Statut_equipement__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>EquipSin_SousStatut</valueSetName>
    </valueSet>
</CustomField>