hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Statut_equipement__c.field-meta.xml
<CustomField>
    <fullName>Statut_equipement__c</fullName>
    <label>Statut equipement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EquipSin_Statut</valueSetName>
    </valueSet>
</CustomField>