hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/StorePremium__c.field-meta.xml
<CustomField>
    <fullName>StorePremium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Magasin choisi pour l&apos;échange avec la prime en magasin</description>
    <label>Magasin pour prime</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Distributeur location</value>
        </filterItems>
        <filterItems>
            <field>Account.StorePremiumEligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipement sinistre</relationshipLabel>
    <relationshipName>Equipement_sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>