hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/street__c.field-meta.xml
<CustomField>
    <fullName>street__c</fullName>
    <label>Rue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>