hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/Suspension_ligne__c.field-meta.xml
<CustomField>
    <fullName>Suspension_ligne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspension de ligne</label>
    <type>Checkbox</type>
</CustomField>