hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/TechEchange__c.field-meta.xml
<CustomField>
    <fullName>TechEchange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Echange</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Matrice_cout_equipement__c.Disponible_Echange__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Matrice_cout_equipement__c</referenceTo>
    <relationshipLabel>Equipement sinistre (Matrice coût equipement)</relationshipLabel>
    <relationshipName>TECH_Echange</relationshipName>
    <type>Lookup</type>
</CustomField>