hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/ThirdChoice__c.field-meta.xml
<CustomField>
    <fullName>ThirdChoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Troisième choix du GS lors du choix de l&apos;indemnisation - Third choice made by the GS when choosing the compensation.</description>
    <label>Choix 3</label>
    <referenceTo>Matrice_cout_equipement__c</referenceTo>
    <relationshipLabel>Equipement sinistre (3ème choix)</relationshipLabel>
    <relationshipName>Equipement_sinistre4</relationshipName>
    <type>Lookup</type>
</CustomField>