hubSide/force-app/main/default/objects/Equipement_sinistre__c/fields/ThirdChoiceRank__c.field-meta.xml
<CustomField>
    <fullName>ThirdChoiceRank__c</fullName>
    <description>Grade du choix #3 - Third choice rank</description>
    <label>Grade choix 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeEquipSin</valueSetName>
    </valueSet>
</CustomField>